<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/appHome"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/profile"
            android:title="@string/my_profile"
            android:icon="@drawable/profile"/>
        <item
            android:id="@+id/favourites"
            android:title="@string/favourites_restaurants"
            android:icon="@drawable/favourite"/>
        <item
            android:id="@+id/history"
            android:title="@string/order_history"
            android:icon="@drawable/history"/>
        <item
            android:id="@+id/faqs"
            android:title="@string/faqs"
            android:icon="@drawable/faqs"/>
        <item
            android:id="@+id/logout"
            android:title="@string/log_out"
            android:icon="@drawable/logout"/>

    </group>


</menu>