<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.FAQSFragment"
    android:background="#ffffff">
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">
       <TextView
           android:id="@+id/developer"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="10dp"
           android:text="@string/q1"
           android:padding="5dp"
           android:textColor="@color/colorAccent"
           android:textStyle="bold"
           android:textSize="20sp"/>
        <TextView
            android:id="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/developer"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:text="@string/a1"
                           />
        <TextView
            android:id="@+id/interest"
            android:layout_below="@+id/a1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/q2"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/interest"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:text="@string/a2"
            />
        <TextView
            android:id="@+id/q3"
            android:layout_below="@+id/a2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/q3"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q3"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:text="@string/a3"
            />
        <TextView
            android:id="@+id/q4"
            android:layout_below="@+id/a3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/q4"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q4"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:text="@string/a4"
            />
        <TextView
            android:id="@+id/q5"
            android:layout_below="@+id/a4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/q5"
            android:padding="5dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/a5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/q5"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textColor="#000000"
            android:padding="5dp"
            android:text="@string/a5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/a5"/>
    </RelativeLayout>

</ScrollView>